Adding vertex color layer in edit mode destroys the active color layer data #44915

Closed
opened 2015-06-01 13:34:29 +02:00 by Stanislav Blinov · 4 comments

System Information
Linux 64 bit

Blender Version
Broken: 2.74

Short description of error
Clicking the "+" button in vertex color layers panel while in edit mode adds new layer, but destroys data on the existing color layer

Exact steps for others to reproduce the error

  1. Open vcol_editmode_destroy.blend
  2. Switch to Edit mode
  3. Click "+" in Vertex Colors panel
  4. Switch to Vertex Paint mode
  5. Both old and new layers now don't contain any color data
**System Information** Linux 64 bit **Blender Version** Broken: 2.74 **Short description of error** Clicking the "+" button in vertex color layers panel while in edit mode adds new layer, but destroys data on the existing color layer **Exact steps for others to reproduce the error** 1. Open [vcol_editmode_destroy.blend](https://archive.blender.org/developer/F182799/vcol_editmode_destroy.blend) 2. Switch to Edit mode 3. Click "+" in Vertex Colors panel 4. Switch to Vertex Paint mode 5. Both old and new layers now don't contain any color data

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

This issue was referenced by 7173069cbe

This issue was referenced by 7173069cbe76b69b5800cee91a25cee6cb2a9586

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44915
No description provided.