Fix T44915 vertex color lost when adding new layer in edit mode.

Was copying new layer colors to old layer colors.